fixing spacing details

--- a/app/assets/stylesheets/atoms/_form-elements.scss
+++ b/app/assets/stylesheets/atoms/_form-elements.scss
@@ -21,7 +21,6 @@ label {
 	font-size: $font-size-normal;
 	font-weight: 700;
   height: $s60;
-	margin-bottom: $s25;
 	padding: 0 $s25;
   box-shadow: inset 0px 2px 0px rgba(#000, .15);
 	border: 2px solid $color-grey-darkest;
