--- a/app/assets/stylesheets/molecules/_progress-step-bar.scss
+++ b/app/assets/stylesheets/molecules/_progress-step-bar.scss
@@ -2,21 +2,21 @@
   margin: 0 auto;
   margin-top: 0;
   margin-bottom: $s60;
-  max-width: 300px;
+  max-width: 400px;
 }
 
 .progress-step-bar__bar {
   position: relative;
   text-align: justify;
-  height: 35px;
+  height: $s35;
 
   &:before {
     content: '';
     display: block;
     height: 3px;
     position: absolute;
-    left: 20px;
-    right: 20px;
+    left: $s15;
+    right: $s15;
     top: 50%;
     margin-top: -1px;
     background-color: $color-grey-darkest;
@@ -31,8 +31,8 @@
 .progress-step-bar__step {
   position: relative;
   display: inline-block;
-  width: 35px;
-  height: 35px;
+  width: $s35;
+  height: $s35;
   background-color: #fff;
   border: 2px solid $color-grey-darkest;
   border-radius: 50%;
@@ -58,4 +58,5 @@
 .progress-step-bar__label {
   margin-top: $padding-small;
   text-align: center;
+  margin-top: $s25;
 }
